add_executable(p1002 p1002.cpp)
add_executable(p1003 p1003.cpp)
add_executable(p1004 p1004.cpp)
add_executable(p1095 p1095.cpp)
add_executable(p1096 p1096.cpp)
add_executable(p1097 p1097.cpp)
add_executable(p135 p135.cpp)
add_executable(p134 p134.cpp)
add_executable(p136 p136.cpp)
add_executable(p170 p170.cpp)
add_executable(p86 p86.cpp)
add_executable(p87 p87.cpp)
add_executable(p237 p237.cpp)
add_executable(p88 p88.cpp)
add_executable(p31 p31.cpp)
add_executable(p33 p33.cpp)
add_executable(p242 p242.cpp)
add_executable(p241 p241.cpp)
add_executable(p35 p35.cpp)