add_executable(1 1_two_sum.cc)
add_executable(121 121_best_time_to_buy_and_sell_stock.cc)
add_executable(2578 2578_split_with_minimum_sum.cc)
add_executable(70 70_climbing_stairs.cc)
add_executable(104 104_maximum_depth_of_binary_tree.cc)
add_executable(100 100_same_tree.cc)
add_executable(20 20_valid_parentheses.cc)
add_executable(112 112_path_sum.cc)