add_executable(1 1_two_sum.cc)
add_executable(121 121_best_time_to_buy_and_sell_stock.cc)
add_executable(2578 2578_split_with_minimum_sum.cc)
add_executable(70 70_climbing_stairs.cc)
add_executable(104 104_maximum_depth_of_binary_tree.cc)
add_executable(100 100_same_tree.cc)
add_executable(20 20_valid_parentheses.cc)
add_executable(112 112_path_sum.cc)
add_executable(225 225_implement_stack_using_queues.cc)
add_executable(2129 2129_capitalize_the_title.cc)
add_executable(LCR024 LCR024_UHnkqh.cc)
add_executable(21 21_merge_two_sorted_lists.cc)
add_executable(9 9_palindrome_number.cc)
add_executable(14 14_longest_common_prefix.cc)
add_executable(26 26_remove_duplicates_from_sorted_array.cc)
add_executable(27 27_remove_element.cc)
add_executable(28 28_find_the_index_of_the_first_occurrence_in_a_string.cc)
add_executable(35 35_search_insert_position.cc)
add_executable(66 66_plus_one.cc)
add_executable(58 58_length_of_last_word.cc)