add_executable(4 4_median_of_two_sorted_arrays.cc)
add_executable(135 135_candy.cc)
add_executable(42 42_trapping_rain_water.cc)
add_executable(68 68_text_justification.cc)
add_executable(123 123_best_time_to_buy_and_sell_stock_iii.cc)
add_executable(188 188_best_time_to_buy_and_sell_stock_iv.cc)
add_executable(149 149_max_points_on_a_line.cc)
add_executable(10 10_regular_expression_matching.cc)
add_executable(127 127_word_ladder.cc)
add_executable(25 25_reverse_nodes_in_k_group.cc)
add_executable(224 224_basic_calculator.cc)
add_executable(502 502_ipo.cc)
add_executable(295 295_find_median_from_data_stream.cc)