add_executable(739 739_daily_temperatures.cc)
add_executable(797 797_all_paths_from_source_to_target.cc)
add_executable(2560 2560_house_robber_iv.cc)
add_executable(198 198_house_robber.cc)
add_executable(213 213_house_robber_ii.cc)
add_executable(901 901_online_stock_span.cc)
add_executable(714 714_best_time_to_buy_and_sell_stock_with_transaction_fee.cc)
add_executable(2034 2034_stock_price_fluctuation.cc)
add_executable(2 2_add_two_numbers.cc)
add_executable(3 3_longest_substring_without_repeating_characters.cc)
add_executable(5 5_longest_palindromic_substring.cc)
add_executable(80 80_remove_duplicates_from_sorted_array_ii.cc)
add_executable(187 187_repeated_dna_sequences.cc)
add_executable(189 189_rotate_array.cc)
add_executable(122 122_best_time_to_buy_and_sell_stock_ii.cc)
add_executable(55 55_jump_game.cc)
add_executable(45 45_jump_game_ii.cc)
add_executable(6 6_zigzag_conversion.cc)
add_executable(274 274_h_index.cc)
add_executable(238 238_product_of_array_except_self.cc)
add_executable(380 380_insert_delete_getrandom_o1.cc)
add_executable(134 134_gas_station.cc)
add_executable(8 8_string_to_integer_atoi.cc)
add_executable(7 7_reverse_integer.cc)
add_executable(12 12_integer_to_roman.cc)
add_executable(11 11_container_with_most_water.cc)