add_executable(739 739_daily_temperatures.cc)
add_executable(797 797_all_paths_from_source_to_target.cc)
add_executable(2560 2560_house_robber_iv.cc)
add_executable(198 198_house_robber.cc)
add_executable(213 213_house_robber_ii.cc)
add_executable(901 901_online_stock_span.cc)
add_executable(714 714_best_time_to_buy_and_sell_stock_with_transaction_fee.cc)
add_executable(2034 2034_stock_price_fluctuation.cc)
add_executable(2 2_add_two_numbers.cc)
add_executable(3 3_longest_substring_without_repeating_characters.cc)
add_executable(5 5_longest_palindromic_substring.cc)
add_executable(80 80_remove_duplicates_from_sorted_array_ii.cc)
add_executable(187 187_repeated_dna_sequences.cc)
add_executable(189 189_rotate_array.cc)
add_executable(122 122_best_time_to_buy_and_sell_stock_ii.cc)
add_executable(55 55_jump_game.cc)
add_executable(45 45_jump_game_ii.cc)
add_executable(6 6_zigzag_conversion.cc)
add_executable(274 274_h_index.cc)
add_executable(238 238_product_of_array_except_self.cc)
add_executable(380 380_insert_delete_getrandom_o1.cc)
add_executable(134 134_gas_station.cc)
add_executable(8 8_string_to_integer_atoi.cc)
add_executable(7 7_reverse_integer.cc)
add_executable(12 12_integer_to_roman.cc)
add_executable(11 11_container_with_most_water.cc)
add_executable(151 151_reverse_words_in_a_string.cc)
add_executable(139 139_word_break.cc)
add_executable(322 322_coin_change.cc)
add_executable(300 300_longest_increasing_subsequence.cc)
add_executable(120 120_triangle.cc)
add_executable(64 64_minimum_path_sum.cc)
add_executable(63 63_unique_paths_ii.cc)
add_executable(97 97_interleaving_string.cc)
add_executable(72 72_edit_distance.cc)
add_executable(221 221_maximal_square.cc)
add_executable(59 59_spiral_matrix_ii.cc)
add_executable(172 172_factorial_trailing_zeroes.cc)
add_executable(50 50_powx_n.cc)
add_executable(137 137_single_number_ii.cc)
add_executable(201 201_bitwise_and_of_numbers_range.cc)
add_executable(200 200_number_of_islands.cc)
add_executable(130 130_surrounded_regions.cc)
add_executable(133 133_clone_graph.cc)
add_executable(399 399_evaluate_division.cc)
add_executable(207 207_course_schedule.cc)
add_executable(909 909_snakes_and_ladders.cc)
add_executable(15 15_3sum.cc)
add_executable(16 16_3sum_closest.cc)
add_executable(33 33_search_in_rotated_sorted_array.cc)
add_executable(433 433_minimum_genetic_mutation.cc)
add_executable(1670 1670_design_front_middle_back_queue.cc)
add_executable(138 138_copy_list_with_random_pointer.cc)
add_executable(92 92_reverse_linked_list_ii.cc)
add_executable(236 236_lowest_common_ancestor_of_a_binary_tree.cc)
add_executable(19 19_remove_nth_node_from_end_of_list.cc)
add_executable(199 199_binary_tree_right_side_view.cc)
add_executable(82 82_remove_duplicates_from_sorted_list_ii.cc)