add_executable(739 739_daily_temperatures.cc)
add_executable(797 797_all_paths_from_source_to_target.cc)
add_executable(2560 2560_house_robber_iv.cc)
add_executable(198 198_house_robber.cc)
add_executable(213 213_house_robber_ii.cc)
add_executable(901 901_online_stock_span.cc)
add_executable(714 714_best_time_to_buy_and_sell_stock_with_transaction_fee.cc)
add_executable(2034 2034_stock_price_fluctuation.cc)
add_executable(2 2_add_two_numbers.cc)
add_executable(3 3_longest_substring_without_repeating_characters.cc)
add_executable(5 5_longest_palindromic_substring.cc)
add_executable(80 80_remove_duplicates_from_sorted_array_ii.cc)
add_executable(187 187_repeated_dna_sequences.cc)
add_executable(189 189_rotate_array.cc)
add_executable(122 122_best_time_to_buy_and_sell_stock_ii.cc)
add_executable(55 55_jump_game.cc)
add_executable(45 45_jump_game_ii.cc)
add_executable(6 6_zigzag_conversion.cc)
add_executable(274 274_h_index.cc)
add_executable(238 238_product_of_array_except_self.cc)
add_executable(380 380_insert_delete_getrandom_o1.cc)
add_executable(134 134_gas_station.cc)
add_executable(8 8_string_to_integer_atoi.cc)
add_executable(7 7_reverse_integer.cc)
add_executable(12 12_integer_to_roman.cc)
add_executable(11 11_container_with_most_water.cc)
add_executable(151 151_reverse_words_in_a_string.cc)
add_executable(139 139_word_break.cc)
add_executable(322 322_coin_change.cc)
add_executable(300 300_longest_increasing_subsequence.cc)
add_executable(120 120_triangle.cc)
add_executable(64 64_minimum_path_sum.cc)
add_executable(63 63_unique_paths_ii.cc)
add_executable(97 97_interleaving_string.cc)
add_executable(72 72_edit_distance.cc)
add_executable(221 221_maximal_square.cc)
add_executable(59 59_spiral_matrix_ii.cc)
add_executable(172 172_factorial_trailing_zeroes.cc)
add_executable(50 50_powx_n.cc)
add_executable(137 137_single_number_ii.cc)
add_executable(201 201_bitwise_and_of_numbers_range.cc)
add_executable(200 200_number_of_islands.cc)
add_executable(130 130_surrounded_regions.cc)
add_executable(133 133_clone_graph.cc)
add_executable(399 399_evaluate_division.cc)
add_executable(207 207_course_schedule.cc)
add_executable(909 909_snakes_and_ladders.cc)
add_executable(15 15_3sum.cc)
add_executable(16 16_3sum_closest.cc)
add_executable(33 33_search_in_rotated_sorted_array.cc)
add_executable(433 433_minimum_genetic_mutation.cc)
add_executable(1670 1670_design_front_middle_back_queue.cc)
add_executable(138 138_copy_list_with_random_pointer.cc)
add_executable(92 92_reverse_linked_list_ii.cc)
add_executable(236 236_lowest_common_ancestor_of_a_binary_tree.cc)
add_executable(19 19_remove_nth_node_from_end_of_list.cc)
add_executable(199 199_binary_tree_right_side_view.cc)
add_executable(82 82_remove_duplicates_from_sorted_list_ii.cc)
add_executable(61 61_rotate_list.cc)
add_executable(86 86_partition_list.cc)
add_executable(146 146_lru_cache.cc)
add_executable(105 105_construct_binary_tree_from_preorder_and_inorder_traversal.cc)
add_executable(56 56_merge_intervals.cc)
add_executable(167 167_two_sum_ii_input_array_is_sorted.cc)
add_executable(57 57_insert_interval.cc)
add_executable(71 71_simplify_path.cc)
add_executable(452 452_minimum_number_of_arrows_to_burst_balloons.cc)
add_executable(155 155_min_stack.cc)
add_executable(49 49_group_anagrams.cc)
add_executable(128 128_longest_consecutive_sequence.cc)
add_executable(17 17_letter_combinations_of_a_phone_number.cc)
add_executable(208 208_implement_trie_prefix_tree.cc)
add_executable(211 211_design_add_and_search_words_data_structure.cc)
add_executable(212 212_word_search_ii.cc)
add_executable(77 77_combinations.cc)
add_executable(102 102_binary_tree_level_order_traversal.cc)
add_executable(103 103_binary_tree_zigzag_level_order_traversal.cc)
add_executable(230 230_kth_smallest_element_in_a_bst.cc)
add_executable(98 98_validate_binary_search_tree.cc)
add_executable(173 173_binary_search_tree_iterator.cc)
add_executable(129 129_sum_root_to_leaf_numbers.cc)
add_executable(106 106_construct_binary_tree_from_inorder_and_postorder_traversal.cc)
add_executable(117 117_populating_next_right_pointers_in_each_node_ii.cc)
add_executable(114 114_flatten_binary_tree_to_linked_list.cc)
add_executable(62 62_unique_paths.cc)
add_executable(124 124_binary_tree_maximum_path_sum.cc)
add_executable(150 150_evaluate_reverse_polish_notation.cc)
add_executable(209 209_minimum_size_subarray_sum.cc)
add_executable(210 210_course_schedule_ii.cc)
add_executable(373 373_find_k_pairs_with_smallest_sums.cc)
add_executable(215 215_kth_largest_element_in_an_array.cc)
add_executable(34 34_find_first_and_last_position_of_element_in_sorted_array.cc)
add_executable(74 74_search_a_2d_matrix.cc)
add_executable(153 153_find_minimum_in_rotated_sorted_array.cc)
add_executable(918 918_maximum_sum_circular_subarray.cc)
add_executable(427 427_construct_quad_tree.cc)
add_executable(39 39_combination_sum.cc)
add_executable(22 22_generate_parentheses.cc)
add_executable(48 48_rotate_image.cc)
add_executable(73 73_set_matrix_zeroes.cc)
add_executable(36 36_valid_sudoku.cc)
add_executable(289 289_game_of_life.cc)
add_executable(438 438_find_all_anagrams_in_a_string.cc)
add_executable(560 560_subarray_sum_equals_k.cc)
add_executable(240 240_search_a_2d_matrix_ii.cc)
add_executable(75 75_sort_colors.cc)
add_executable(31 31_next_permutation.cc)
add_executable(78 78_subsets.cc)
add_executable(90 90_subsets_ii.cc)